# memes_api

./: .env  README.md  docker-compose.yml
api_memes/: .env  Dockerfile  alembic.ini  pyproject.toml
api_memes/src/: main.py
api_memes/src/database/: __init__.py  database.py
api_memes/src/database/cruds/: __init__.py  memes.py
api_memes/src/database/migrations/: env.py
api_memes/src/database/migrations/versions/: 7e6e8def443d_create_database.py
api_memes/src/database/models/: __init__.py  base.py  memes.py
api_memes/src/helpers/: __init__.py  dependencies.py  exceptions.py
api_memes/src/routers/: memes.py
api_memes/src/schemas/: __init__.py  memes.py
api_memes/src/services/: __init__.py  memes.py
api_memes/src/settings/: __init__.py  settings.py
api_memes/tests/: conftest.py  test_mem.py
api_s3/: .env  Dockerfile  pyproject.toml
api_s3/src/: main.py
api_s3/src/helpers/: __init__.py  exceptions.py  s3_manager.py
api_s3/src/routers/: s3_routers.py
api_s3/src/services/: __init__.py  s3_services.py
api_s3/src/settings/: __init__.py  settings.py  swagger_doc.py
