[tool.poetry]
name = "api-memes"
version = "0.1.0"
description = ""
authors = ["annbabkina <aa.babkina16@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.1"
sqlalchemy = "^2.0.31"
pytest = "^8.3.1"
pytest-asyncio = "^0.23.8"
testcontainers = "^4.7.2"
pydantic = "^2.8.2"
pydantic-settings = "^2.3.4"
async-sqlalchemy = "^1.0.0"
alembic = "^1.13.2"
asyncpg = "^0.29.0"
psycopg2 = "^2.9.9"
aiohttp = "^3.9.5"
psycopg2-binary = "^2.9.9"
aioresponses = "^0.7.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode='auto'